@@ -1,3 +1,6 @@
+* Mon Sep 18 2017 Lucas Yamanishi <lucas.yamanishi@onyxpoint.com> - 6.0.4-0
+- Set minimum length on sssd::domains
+
 * Mon Sep 11 2017 Judy Johnson <judy.johnson@onyxpoint.com> - 6.0.3-0
 - Only enable 'try_inotify' if explicitly set
 
